@@ -26,6 +26,9 @@
 #include "gtkobject.h"
 #include "gtkprivate.h"
 
+#define XDG_PREFIX _gtk_xdg
+#include "xdgmime/xdgmime.h"
+
 typedef struct _GtkFileFilterClass GtkFileFilterClass;
 typedef struct _FilterRule FilterRule;
 
@@ -403,7 +406,7 @@ gtk_file_filter_filter (GtkFileFilter           *filter,
 	{
 	case FILTER_RULE_MIME_TYPE:
 	  if (filter_info->mime_type != NULL
-	      && strcmp (rule->u.mime_type, filter_info->mime_type) == 0)
+	      && xdg_mime_mime_type_subclass (filter_info->mime_type, rule->u.mime_type))
 	    return TRUE;
 	  break;
 	case FILTER_RULE_PATTERN:
